# csad2526KI-408BokhonokOlesia3

./: .gitignore  CMakeLists.txt  README.md  SPI_master.vhdl  ci.cmd  ci.sh  math_operations.cpp  math_operations.h  testbench.vhdl  uart_rx.vhdl  uart_tx.vhdl  vhdl.v
.github/workflows/: ci.yml
tests/: unit_tests.cpp
